--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "repository": "",
   "keywords": "",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fibos.js": "^0.3.2"
+  }
 }
